--- a/static/rca/site/assets/css/modules.less
+++ b/static/rca/site/assets/css/modules.less
@@ -45,6 +45,7 @@
  * Quotation
  * Gallery
  * Index page intro
+ * Contact
  */
 
 /**
@@ -180,10 +181,19 @@
 
     .caption{
         position:absolute;
-        bottom:0;
+        //bottom:0;
         right:0;
         padding:@grid-gutter-width;
         margin:0;
+        &.title {
+            bottom: 3em;
+        }
+        &.medium {
+            bottom: 1.5em;
+        }
+        &.details {
+            bottom:0;
+        }
     }
 }
 
@@ -752,6 +762,7 @@
 .x-plus{
     .item-container{
         height:auto; /* important necessary to override inlines styles added by js */
+        margin-bottom: @spacing-one; /* fix spacing for mobile (the spacing applied by .module gets out-specified by unlist() at the mobile res) */
     }
 }
 
